--- a/src/app/modulos/seguridad/login/login.component.html
+++ b/src/app/modulos/seguridad/login/login.component.html
@@ -3,8 +3,8 @@
       <div class="card grey lighten-3">
         <div class="card-content">
           <h4 class="card-title center-align">Identificación de Usuarios</h4>
-          <!-- <form [formGroup]="fgValidacion" (ngSubmit)="identificarUsuario()"> -->
-            <form [formGroup]="fgValidacion">
+           <form [formGroup]="fgValidacion" (ngSubmit)="identificarUsuario()">
+          
             <div class="row">
               <div class="input-field col s12">
                 <i class="material-icons prefix">email</i>
