--- a/src/app/assets/footer/footer.component.html
+++ b/src/app/assets/footer/footer.component.html
@@ -1,24 +1,24 @@
-<footer class="page-footer">
-    <div class="container">
+<footer class="page-footer cyan darken-4">
+    <div class="container " >
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">MisionTIC</h5>
-          <p class="grey-text text-lighten-4">Equipo 7 - Grupo 25</p>
+          <p class="grey-text text-lighten-4">Equipo 2 - Grupo 56</p>
         </div>
         <div class="col l4 offset-l2 s12">
           <h5 class="white-text">Miembros de equipo</h5>
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Javier</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Luis</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Carolina</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Lorena</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Roman Rey</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Patricia Forero</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Cazteldary Martinez</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Yerzin Perez</a></li>
           </ul>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      © 2014 Copyright Text
+      © 2022 Copyright
       <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
       </div>
     </div>
