--- a/src/app/assets/navbar/navbar.component.html
+++ b/src/app/assets/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav>
+<nav class="cyan darken-4">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Logo</a>
+      <a href="#" class="brand-logo">Gestion de Buses</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li *ngIf="activeSession"><a routerLink="estaciones/get">Estaciones</a></li>
         <li *ngIf="activeSession"><a routerLink="rutas/get">Rutas</a></li>
