--- a/src/app/modulos/estaciones/get/get.component.html
+++ b/src/app/modulos/estaciones/get/get.component.html
@@ -1,2 +1,34 @@
-<p>get works!</p>
-<h1>Estaciones</h1>
+<div class="container">
+    <br>
+    <a routerLink="/estaciones/create" class="btn">Registrar Estación</a>
+   
+    <table class="table responsive">
+      <thead>
+        <tr>
+            <th>Nombre</th>
+            <th>Dirección</th>
+            <th>Coordenada X</th>
+            <th>Coordenada Y</th>
+            <th>Tipo</th>
+        </tr>
+      </thead>
+   
+      <tbody>
+        <tr *ngFor="let p of listado">
+          <td>{{p.nombre}}</td>
+          <td>{{p.direccion}}</td>
+          <td>{{p.coordenada_x}}</td>
+          <td>{{p.coordenada_y}}</td>
+          <td>{{p.tipo}}</td>
+          <td>
+            <a routerLink="/estaciones/edit/{{p.id}}" class="btn">
+              <i class="material-icons">create</i>
+          </a>
+          <button class="btn red" (click)="delete(p.id)">
+              <i class="material-icons">delete</i>
+          </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    </div>
