--- a/src/app/modulos/rutas/get/get.component.html
+++ b/src/app/modulos/rutas/get/get.component.html
@@ -1,2 +1,29 @@
-<p>get works!</p>
-<h1>Rutas</h1>
+<div class="container">
+    <br>
+    <a routerLink="/rutas/create" class="btn">Registrar Ruta</a>
+   
+    <table class="table responsive">
+      <thead>
+        <tr>
+            <th>Origen</th>
+            <th>Destino</th>
+            <th>Tiempo Estimado</th>
+        </tr>
+      </thead>
+   
+      <tbody>
+        <tr *ngFor="let p of listado">
+          <td>{{p.origen}}</td>
+          <td>{{p.destino}}</td>
+          <td>{{p.tiempo_estimado}}</td>
+          
+          <a routerLink="/admin/edit/{{p.id}}" class="btn">
+            <i class="material-icons">create</i>
+        </a>
+        <button class="btn red" (click)="delete(p.id)">
+            <i class="material-icons">delete</i>
+        </button>
+        </tr>
+      </tbody>
+    </table>
+    </div>
