--- a/src/app/modulos/servicios/create/create.component.html
+++ b/src/app/modulos/servicios/create/create.component.html
@@ -1,1 +1,56 @@
-<p>create works!</p>
+
+<div class="container">
+    <h3 class="center-align">Registrar Servicio</h3>
+    <form [formGroup]="fgValidacion" class="col s12" (ngSubmit)="store()">
+      
+       <div class="row">
+        <div class="input-field col s12">
+          <input formControlName="fecha" type="text" class="validate">
+          <label for="nombre">Fecha</label>
+        </div>
+        </div> 
+
+        <div class="row">
+        <div class="input-field col s6">
+          <input formControlName="hora_inicio" type="text" class="validate">
+          <label for="hora_inicio">Hora de Inicio</label>
+        </div>
+        <div class="input-field col s6">
+            <input formControlName="hora_fin" type="text" class="validate">
+            <label for="hora_fin">Hora Fin</label>
+          </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s6">
+          <input formControlName="placa_vehiculo" type="text" class="validate">
+          <label for="placa_vehiculo">Placa del vehiculo</label>
+        </div>
+        <div class="input-field col s6">
+          <input formControlName="nombre_conductor" type="text" class="validate">
+          <label for="nombre_conductor">Nombre del Conductor</label>
+        </div>  
+      </div>
+
+      <div class="row">
+        <div class="input-field col s6">
+            <input formControlName="dinero_recogido" type="text" class="validate">
+            <label for="dinero_recogido">Dinero Recogido</label>
+            </div>
+            <div class="input-field col s6">
+                <input formControlName="ruta" type="text" class="validate">
+                <label for="ruta">Ruta</label>
+                </div>
+      </div>
+   
+      <div class="row center-align">
+        <button [disabled]="!fgValidacion.valid" class="btn waves-effect waves-light" type="submit" name="action">Enviar
+          <i class="material-icons right">send</i>
+        </button>
+      </div>
+    </form>
+
+
+    
+  </div>
+
