--- a/src/app/modulos/servicios/get/get.component.html
+++ b/src/app/modulos/servicios/get/get.component.html
@@ -1,1 +1,37 @@
-<p>get works!</p>
+<div class="container">
+    <br>
+    <a routerLink="/servicios/create" class="btn">Registrar Servicio</a>
+   
+    <table class="table responsive">
+      <thead>
+        <tr>
+            <th>Fecha</th>
+            <th>Hora de Inicio</th>
+            <th>Hora Fin</th>
+            <th>Placa del vehiculo</th>
+            <th>Nombre del conductor</th>
+            <th>Dinero recogido</th>
+            <th>Ruta</th>
+        </tr>
+      </thead>
+   
+      <tbody>
+        <tr *ngFor="let p of listado">
+          <td>{{p.fecha}}</td>
+          <td>{{p.hora_inicio}}</td>
+          <td>{{p.hora_fin}}</td>
+          <td>{{p.placa_vehiculo}}</td>
+          <td>{{p.nombre_conductor}}</td>
+          <td>{{p.dinero_recogido}}</td>
+          <td>{{p.ruta}}</td>
+
+          <a routerLink="/admin/edit/{{p.id}}" class="btn">
+            <i class="material-icons">create</i>
+        </a>
+        <button class="btn red" (click)="delete(p.id)">
+            <i class="material-icons">delete</i>
+        </button>
+        </tr>
+      </tbody>
+    </table>
+    </div>
